syntax = "proto3";
package pb;

import "config.proto";
import "asset.proto";
import "mob.proto";
import "map.proto";

message AssetManifest {
	Config config = 1;
	repeated SpriteBox character = 2;
	repeated SpriteBox animal = 3;
	repeated Tileset tileset = 4;
	repeated Map map = 5;
	repeated MobDef mob = 6;
}
